# lowercaseLabs

./: .gitignore  AI_README.md  README.md  gpt.sh
ClothesPicker/: CLOTHES_INSTRUCTION.prompt  CLOTHES_LIST.prompt  README.md  Test.ipynb  utils.py
SearchAgent/: .python-version  README.md  Testing.ipynb  gen.py  tmp.json
catchAll/: .python-version  BPE.py  README.md  Similarity.py  main.py  train_full.py
dump/: Classification.ipynb
jupyterDocker/: setup.sh
jupyterDocker/cpu/: Dockerfile  docker_push.sh  jupyter_notebook_config.py  run.sh
latentExplore/: README.md
qork/: .gitignore  AGENTS.md  README.md  build.sh  pyproject.toml  upload.sh
qork/qork/: config.py  main.py  models.py  printer.py  utils.py
qork/tests/: test_printer.py
raggar/: README.md
raggar/chatter/: README.md  agents.py  gen.py
research/SAP/: ResearchSummary.md
sapProject/: AAVE.jsonl  PrelimAnalysis.ipynb  WAE.jsonl
sapProject/AAL dataset/: README.md  final_eval_aal.csv  final_prompts_aal.csv
zimer/: pyproject.toml
zimer/tests/: test_ztime.py
zimer/zimer/: __init__.py
zimer/zimer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ztime/: README.md  pyproject.toml
ztime/ztime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
