[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qork"
version = "0.0.2"
authors = [
  { name="Zubin Aysola", email="zubinpersonalemail@email.com" },
]
description = "A simple CLI for interacting with OpenAI models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "rich",
]

[project.scripts]
qork = "qork.main:main"
