[project]
name = "zimer"
version = "0.1.0"
description = "A simple decorator for timing functions."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Zubin Aysola", email = "zubin-email@email.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zaysola/ztime"
